--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,20 +1,18 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/security_docker
-    username: root
-    password: admin
+    url: jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+    username: ${DB_USER}
+    password: ${DB_PASS}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update  # safer for production; 'create-drop' wipes DB on restart
     show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
         format_sql: true
-    database: mysql
-    database-platform: org.hibernate.dialect.MySQLDialect
 
 jwt:
-  secret: ELB0pl9Ljwi6x/ik0eviaE0GM0XNnChbmKyNhrtCSok=
+  secret: ${JWT_SECRET:ELB0pl9Ljwi6x/ik0eviaE0GM0XNnChbmKyNhrtCSok=}
